--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,7 @@ body {
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
-  transform: translate(-50%);
+  transform: translateY(-50%);
   width: 100%;
   text-align: center;
   font-size: 4rem;
