--- a/styles/main.css
+++ b/styles/main.css
@@ -4,12 +4,13 @@ html {
 }
 
 body {
-  font-family: 'Open Sans';
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   color: white;
   min-height: 100%;
 }
 
-.landing {
+body.landing {
   background-color: rgb(58,23,63);
 }
 
@@ -42,10 +43,13 @@ body {
   width: 100%;
   text-align: center;
   font-size: 4rem;
-  font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 0.5rem;
-  text-shadow: 1px 1px 0px rgb(58,23,63);
+  text-shadow: 1px 2px 0px rgb(58,23,63);
+}
+
+.hero-title {
+  font-weight: 500;
 }
 
 .selling-points {
