--- a/styles/album.css
+++ b/styles/album.css
@@ -49,6 +49,8 @@ body.album {
 
 .song-item-number {
     width: 5%;
+    min-width: 30px;
+    text-align: center;
 }
 
 .song-item-title {
@@ -57,6 +59,27 @@ body.album {
 
 .song-item-duration {
     width: 5%;
+}
+
+.album-song-button {
+  text-align: center;
+  font-size: 14px;
+  background-color: white;
+  color: rgb(210, 40, 123);
+  border-radius: 50% 50%;
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+}
+
+.album-song-button:hover {
+  cursor: pointer;
+  color: white;
+  background-color: rgb(210, 40, 123);
+}
+
+.album-song-button span {
+  line-height: 28px;
 }
 
 @media (max-width: 40rem) and (min-width: 20rem) {
@@ -69,7 +92,6 @@ body.album {
     }
 }
 
-/* #3 */
 @media (max-width: 64rem) and (min-width: 20rem) {
    .album-view-song-list {
         position: relative;
